# itmo

./: README.md  laba5.py
Lab3/src/: Main.java
Lab3/src/Entities/: Engine.java  Entity.java  Karlson.java  Malish.java
Lab3/src/Enums/: Action.java
Lab3/src/Interfaces/: ForKarlson.java
Program2Sem/: script.txt
Program2Sem/Lab5/Javadoc/: Main.html  allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  (+9 more)
lab3/: Main.java
lab3/Entities/: Engine.java  Karlson.java  Malish.java
lab3/Interfaces/: ForKarlson.java  ForMalish.java
lab3/src/: Main.java
src/Entities/: Karlson.java
src/Enums/: Action.java
src/Interfaces/: ForEngine.java  ForMalish.java  Places.java
ВторойКурс/: README.md
ВторойКурс/Алгосы/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp
ВторойКурс/Веб/: README.md
ВторойКурс/Языки Программирования/assignment-3-image-transform/solution/: CMakeLists.txt
ВторойКурс/Языки Программирования/assignment-3-image-transform/solution/include/: bmp.h  image.h  image_life.h  transformation.h
ВторойКурс/Языки Программирования/assignment-3-image-transform/solution/src/: bmp.c  image_life.c  main.c  transformation.c
Информатика/Лабораторная№4/: лаба4инфа.docx
ОПД/ВтораяЛабаОпд/: опд2.docx
ОПД/ПерваяЛабаОпд/: опд.docx
ПервыйКурс/: README.md
ПервыйКурс/Программирование/: README.md
Программирование(1Сем)/Лабораторная№2/: Main.java  отчет лаб2прога.docx
Программирование(1Сем)/Лабораторная№3/: лаба3 (3).drawio
Программирование(1Сем)/Лабораторная№4/: Main.java
(+549 files in other folders)
